Added few item and improve detection

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body>
     <div class="titulo">Waiter.JS</div>
     <div id="container">
-        <div class="cocina">C</div>
-        <div id="mesa"></div>
+        <div class="cocina">Cocina</div>
+        <div id="mesa1">1</div>
+        <div id="mesa2">2</div>
+        <div id="mesa3">3</div>
+        <div id="mesa4">4</div>
+        <div id="mesa5">5</div>
+        <div id="mesa6">6</div>
         <div id="camarero"></div>
     </div>
     <div id="hub"></div>
-    <script src="js/script.js"></script>
+    <script src="js/script.js "></script>
 </body>
 
 </html>
