--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 <body>
     <div class="titulo">Waiter.JS</div>
     <div id="container">
-        <div class="cocina">Cocina</div>
-        <div id="mesa1">1</div>
-        <div id="mesa2">2</div>
-        <div id="mesa3">3</div>
-        <div id="mesa4">4</div>
-        <div id="mesa5">5</div>
-        <div id="mesa6">6</div>
-        <div id="camarero"></div>
+        <div id="barra" class="barra">La Barra</div>
+        <div id="mesa1" class="vacia">
+            <p>1</p>
+        </div>
+        <div id="mesa2" class="vacia">
+            <p>2</p>
+        </div>
+        <div id="mesa3" class="vacia">
+            <p>3</p>
+        </div>
+        <div id="mesa4" class="vacia">
+            <p>4</p>
+        </div>
+        <div id="mesa5" class="vacia">
+            <p>5</p>
+        </div>
+        <div id="mesa6" class="vacia">
+            <p>6</p>
+        </div>
+        <div id="camarero" class="vacia"></div>
     </div>
     <div id="hub"></div>
     <script src="js/script.js "></script>
