--- a/index.html
+++ b/index.html
@@ -2,31 +2,36 @@
 <html>
 
 <head>
-    <title>Waiter JS</title>
+    <meta charset="utf-8">
+    <title>CAFFE' JS</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-    <div class="titulo">Waiter.JS</div>
+    <div class="titulo">CAFFE' JS</div>
     <div id="container">
-        <div id="barra" class="barra">La Barra</div>
-        <div id="mesa1" class="vacia">
+        <div id="planta1"></div>
+        <div id="planta2"></div>
+        <div id="planta3"></div>
+        <div id="planta4"></div>
+        <div id="barra" class="barra"></div>
+        <div id="mesa1" class="empty">
             <p>1</p>
         </div>
-        <div id="mesa2" class="vacia">
+        <div id="mesa2" class="new">
             <p>2</p>
         </div>
-        <div id="mesa3" class="vacia">
+        <div id="mesa3" class="served">
             <p>3</p>
         </div>
-        <div id="mesa4" class="vacia">
+        <div id="mesa4" class="pending">
             <p>4</p>
         </div>
-        <div id="mesa5" class="vacia">
+        <div id="mesa5" class="new">
             <p>5</p>
         </div>
-        <div id="mesa6" class="vacia">
+        <div id="mesa6" class="empty">
             <p>6</p>
         </div>
         <div id="camarero" class="vacia"></div>
