Fine tuning for color

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <p>1</p>
         </div>
         <div id="mesa2" class="new">
-            <p>2</p>
+            <p class="green">2</p>
         </div>
-        <div id="mesa3" class="served">
-            <p>3</p>
+        <div id="mesa3" class="new">
+            <p class="yellow">3</p>
         </div>
-        <div id="mesa4" class="pending">
-            <p>4</p>
+        <div id="mesa4" class="new">
+            <p class="red">4</p>
         </div>
-        <div id="mesa5" class="new">
-            <p>5</p>
+        <div id="mesa5" class="pending">
+            <p class="green">5</p>
         </div>
-        <div id="mesa6" class="empty">
-            <p>6</p>
+        <div id="mesa6" class="pending">
+            <p class="red">6</p>
         </div>
         <div id="camarero" class="vacia"></div>
     </div>
