Start business logic

--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
         <div id="planta4"></div>
         <div id="barra" class="barra"></div>
         <div id="mesa1" class="empty">
-            <p>1</p>
+            <p class="">1</p>
         </div>
-        <div id="mesa2" class="new">
-            <p class="green">2</p>
+        <div id="mesa2" class="empty">
+            <p class="">2</p>
         </div>
-        <div id="mesa3" class="new">
-            <p class="yellow">3</p>
+        <div id="mesa3" class="empty">
+            <p class="">3</p>
         </div>
-        <div id="mesa4" class="new">
-            <p class="red">4</p>
+        <div id="mesa4" class="empty">
+            <p class="">4</p>
         </div>
-        <div id="mesa5" class="pending">
-            <p class="green">5</p>
+        <div id="mesa5" class="empty">
+            <p class="">5</p>
         </div>
-        <div id="mesa6" class="pending">
-            <p class="red">6</p>
+        <div id="mesa6" class="empty">
+            <p class="">6</p>
         </div>
         <div id="camarero" class="vacia"></div>
     </div>
-    <div id="hub"></div>
+    <div id="hub">
+        <p><span id="caja">0</span>€</p>
+    </div>
     <script src="js/script.js "></script>
 </body>
 
