Add countdown timer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
         <div id="camarero" class="vacia"></div>
     </div>
     <div id="hub">
-        <p><span id="caja">0</span>€</p>
+        <p id="tiempo">00:00:00</p>
+        <p>Total caja <span id="caja">0</span>€</p>
+        <p>Mesa 1: <span id="hMesa1">...</span></p>
+        <p>Mesa 2: <span id="hMesa2">...</span></p>
+        <p>Mesa 3: <span id="hMesa3">...</span></p>
+        <p>Mesa 4: <span id="hMesa4">...</span></p>
+        <p>Mesa 5: <span id="hMesa5">...</span></p>
+        <p>Mesa 6: <span id="hMesa6">...</span></p>
     </div>
     <script src="js/script.js "></script>
 </body>
