Implement Money for each table

--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
         <div id="mesa6" class="empty">
             <p class="">6</p>
         </div>
-        <div id="camarero" class="vacia"></div>
+        <div id="camarero" class="vacia">
+            <p id="notaSteward" class="">1</p>
+        </div>
     </div>
     <div id="hub">
         <p id="tiempo">00:00:000</p>
         <p>Total caja <span id="caja">0</span>€</p>
+        <p>Barra: <span id="laBarra1">1</span>&nbsp;<span id="laBarra2">2</span>&nbsp;<span id="laBarra3">3</span>&nbsp;<span id="laBarra4">4</span>&nbsp;<span id="laBarra5">5</span>&nbsp;<span id="laBarra6">6</span></p>
         <p>Mesa 1: <span id="hMesa1">...</span></p>
         <p>Mesa 2: <span id="hMesa2">...</span></p>
         <p>Mesa 3: <span id="hMesa3">...</span></p>
