Complete needed step for table 2... coming implementation for the rest of the tables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <div id="planta2"></div>
         <div id="planta3"></div>
         <div id="planta4"></div>
-        <div id="barra" class="barra"></div>
+        <div id="barra" class="barra">
+            <div id="numeroBarra">
+                <div class="listo">1</div>
+                <div class="listo">2</div>
+                <div class="listo">3</div>
+                <div class="listo">4</div>
+                <div class="listo">5</div>
+                <div class="listo">6</div>
+            </div>
+        </div>
         <div id="mesa1" class="empty">
             <p class="">1</p>
         </div>
@@ -35,7 +44,7 @@
             <p class="">6</p>
         </div>
         <div id="camarero" class="vacia">
-            <p id="notaSteward" class="">1</p>
+            <p id="notaSteward" class="none"></p>
         </div>
     </div>
     <div id="hub">
@@ -49,6 +58,8 @@
         <p>Mesa 5: <span id="hMesa5">...</span></p>
         <p>Mesa 6: <span id="hMesa6">...</span></p>
     </div>
+
+    <p id="info"></p>
     <script src="js/script.js "></script>
 </body>
 
