Complete needed step for barra

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div id="planta4"></div>
         <div id="barra" class="barra">
             <div id="numeroBarra">
-                <div class="listo">1</div>
-                <div class="listo">2</div>
-                <div class="listo">3</div>
-                <div class="listo">4</div>
-                <div class="listo">5</div>
-                <div class="listo">6</div>
+                <div id="numBarra1" class="esconde">1</div>
+                <div id="numBarra2" class="esconde">2</div>
+                <div id="numBarra3" class="esconde">3</div>
+                <div id="numBarra4" class="esconde">4</div>
+                <div id="numBarra5" class="esconde">5</div>
+                <div id="numBarra6" class="esconde">6</div>
             </div>
         </div>
         <div id="mesa1" class="empty">
